--- a/resources.qrc
+++ b/resources.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/">
-        <file>phong.frag</file>
-        <file>phong.vert</file>
+        <file>fragment.shader</file>
+        <file>vertex.shader</file>
     </qresource>
 </RCC>
